--- a/views/index.pug
+++ b/views/index.pug
@@ -10,4 +10,8 @@ html(lang="en")
         h2= nofviews
         a(href="/login")="Login Page" 
         br
-        a(href="/account")="My Account" 
+        a(href="/account")="My Account"
+        div
+            form(method="post" action="/logout")
+                table 
+                    input(type="submit" value="Logout")
