--- a/views/index.pug
+++ b/views/index.pug
@@ -1,17 +1,19 @@
 doctype html
 html(lang="en")
     head
-        meta(charset="UTF-8")
-        meta(http-equiv="X-UA-Compatible", content="IE=edge")
-        meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        title= title
-    body 
-        h1= message
-        h2= nofviews
-        a(href="/login")="Login Page" 
-        br
-        a(href="/account")="My Account"
-        div
-            form(method="post" action="/logout")
-                table 
-                    input(type="submit" value="Logout")
+        include headerdetails.pug
+        include styles.pug
+        title Homepage
+    body
+        div(class='grid-container') 
+            div(class='grid-item-style div1') 
+                h3= message
+                h5= nofviews
+                a(href="/login")="Login Page" 
+                br
+                a(href="/account")="My Account"
+                div
+                    form(method="post" action="/logout")
+                        table 
+                            input(type="submit" value="Logout")
+            include infodivs.pug
